feat: some changes
实现并测试了用户服务相关的后端接口
更新用户ID类型为uint32
调整配置结构体
添加文档
