# backend/biz/handler/user.go
@@ -10,6 +10,10 @@ import (
 	"github.com/wifi32767/TikTokMall/rpc/kitex_gen/user"
 )
 
+type useridInput struct {
+	Userid uint32 `json:"userid" binding:"required"`
+}
+
 type registerInput struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
@@ -19,6 +23,10 @@ type updateInput struct {
 	Username    string `json:"username" binding:"required"`
 	OldPassword string `json:"old_password" binding:"required"`
 	NewPassword string `json:"new_password" binding:"required"`
+}
+
+type errorReturn struct {
+	Error string
 }
 
 // @Summary 注册账户
@@ -54,9 +62,9 @@ func UserRegister(c *gin.Context) {
 // @Tags user
 // @Produce json
 // @Param input body registerInput true "登录信息"
-// @Success 200 {object} emptyReturn
-// @Failure 400 {object} errorReturn
-// @Failure 500 {object} errorReturn
+// @Success 200 "成功"
+// @Failure 400 {object} errorReturn "请求格式错误"
+// @Failure 500 {object} errorReturn "服务器错误"
 // @Router /user/login [post]
 func UserLogin(c *gin.Context) {
 	input := registerInput{}
@@ -80,14 +88,14 @@ func UserLogin(c *gin.Context) {
 		return
 	}
 	c.SetCookie("token", token.GetToken(), 30*24*60*60, "/", "localhost", false, true)
-	c.JSON(http.StatusOK, gin.H{})
+	c.Status(http.StatusOK)
 }
 
 // @Summary 登出
 // @Description 登出一个账户
 // @Tags user
 // @Produce json
-// @Success 200 {object} emptyReturn "成功"
+// @Success 200 "成功"
 // @Failure 400 {object} errorReturn "请求格式错误"
 // @Failure 500 {object} errorReturn "服务器错误"
 // @Router /user/logout [post]
@@ -99,14 +107,14 @@ func UserLogout(c *gin.Context) {
 		utils.ErrorHandle(c, err)
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{})
+	c.Status(http.StatusOK)
 }
 
 // @Summary 删除账户
 // @Description 删除一个账户
 // @Tags user
 // @Produce json
-// @Success 200 {object} emptyReturn "成功"
+// @Success 200 "成功"
 // @Failure 400 {object} errorReturn "请求格式错误"
 // @Failure 500 {object} errorReturn "服务器错误"
 // @Router /user/delete [delete]
@@ -128,7 +136,7 @@ func UserDelete(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "删除失败"})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{})
+	c.Status(http.StatusOK)
 }
 
 // @Summary 修改密码
@@ -136,7 +144,7 @@ func UserDelete(c *gin.Context) {
 // @Tags user
 // @Produce json
 // @Param input body updateInput true "修改信息"
-// @Success 200 {object} emptyReturn "成功"
+// @Success 200 "成功"
 // @Failure 400 {object} errorReturn "请求格式错误"
 // @Failure 500 {object} errorReturn "服务器错误"
 // @Router /user/update [put]
@@ -166,5 +174,5 @@ func UserUpdate(c *gin.Context) {
 		utils.ErrorHandle(c, err)
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{})
+	c.Status(http.StatusOK)
 }
